# dagny_sim

dagny_sim/: CMakeLists.txt  dagny.urdf  dagny_nav_sim.yaml  dagny_sim_server.launch  dagny_stdr.yaml  local_costmap.launch  nav_sim.launch  nav_sim.rviz  nav_sim.yaml  package.xml  rviz_nav.launch  sim.launch
dagny_sim/maps/: sparse_obstacles_100.yaml
