<?xml version="1.0"?>
<package>
  <name>dagny_sim</name>
  <version>0.0.0</version>
  <description>The dagny_sim package</description>

  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>


  <license>BSD</license>

  <author email="namniart@gmail.com">Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>stdr_parser</run_depend>
  <run_depend>stdr_resources</run_depend>
  <run_depend>stdr_robot</run_depend>
  <run_depend>stdr_server</run_depend>
  <run_depend>dagny</run_depend>
  <run_depend>ackermann_utils</run_depend>

</package>
